# pyvoice-language-server

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE.rst  README.md  README.rst  noxfile.py  pyproject.toml  pyvoice.sublime-project
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  usage.rst
pyvoice/: __main__.py  custom_jedi_classes.py  generate_expressions.py  generate_imports.py  inference.py  logging.py  project.py  server.py  text_edit_utils.py  types.py
pyvoice/types/: items.py  models.py
tests/: __init__.py  test_main.py
